# python_labas

./: README.md  examples.py  pyproject.toml
data/: input.txt
data/lab08/: students_input.json  students_output.json
data/lab09/: student.csv
data/samples/: cities.csv  people.csv  people.json
src/lab04/: README.md  io_txt_csv.py
src/lab05/: csv_xlsx.py  json_csv.py
src/lab06/: README.md  cli_convert.py  cli_text.py
src/lab07/: README.md
src/lab08/: README.md  models.py  serialize.py
src/lab09/: README.md  example.py  group.py
src/lab10/: README.md  linked_list.py  structures.py
src/lib/: text.py
tests/: test_json_csv.py  test_text.py
